# quantforge

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 946ed1fcdf86_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/data/: fundamentals.py
backend/app/execution/: alpaca_broker.py  sizing.py
backend/app/research/: frames.py
backend/app/validation/: deflated_sharpe.py  engine.py  parameter_stability.py  pbo.py  purged_cv.py  regime_analysis.py  report.py  walk_forward.py
backend/scripts/: consolidate_pool.py  cron_hunt.sh  cross_sectional_forward.py  cross_sectional_hunt.py  hunt.py  paper.py  paper_broker.py  run_hunt.py  shard_hunt.py
backend/tests/integration/: conftest.py  test_backtest_endpoint.py  test_bars_endpoint.py  test_ingest_endpoint.py  test_ingestion_pipeline.py  test_lab_endpoints.py  test_monte_carlo_endpoint.py  test_research_engine.py  test_strategies_endpoint.py  test_timescale_repository.py  test_validation_endpoint.py  test_validation_engine.py
backend/tests/unit/: test_adx.py  test_alpaca_adapter.py  test_alpaca_broker.py  test_aroon.py  test_backtest_benchmark.py  test_backtest_engine.py  test_benchmark_comparator.py  test_bollinger_bands.py  test_cci.py  test_chaikin_money_flow.py  test_connors_rsi.py  test_cors.py  test_cross_sectional_engine.py  test_cross_sectional_forward.py  test_cross_sectional_forward_store.py  (+76 more)
(+274 files in other folders)
