[project]
name = "quantforge-backend"
version = "0.1.0"
description = "QuantForge backend — quantitative research and validation platform"
requires-python = ">=3.12"

# Phase 1 keeps runtime deps minimal. The scientific stack (numpy, pandas, scipy,
# statsmodels, scikit-learn) is added in Phase 2/3, and vectorbt only once its
# Python 3.12 / numpy 2.x resolution is verified (ARCHITECTURE.md §0.5, §5).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "yfinance>=0.2.40",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[tool.uv]
# This is an application, not a distributable package — don't build/install it.
package = false

[tool.coverage.report]
# Don't count non-executed stubs against coverage.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
    "@(abc\\.)?abstractmethod",
]
